--- a/fdts/s32g399a-emu.dts
+++ b/fdts/s32g399a-emu.dts
@@ -19,7 +19,8 @@
 &pinctrl {
 	board_pinctrl {
 		u-boot,dm-pre-reloc;
-		pinctrl_uart1: pinctrl_uart1 {
+	uart1_pins: uart1 {
+		uart1_grp {
 			u-boot,dm-pre-reloc;
 			fsl,pins = <PB09_MSCR_S32G PB09_LIN1_TX_CFG
 				    PB10_MSCR_S32G PB10_LIN1_RX_CFG
@@ -27,16 +28,17 @@
 				    >;
 		};
 	};
+	};
 };
 
 &uart1{
-	pinctrl-0 = <&pinctrl_uart1>;
+	pinctrl-0 = <&uart1_pins>;
 	pinctrl-names = "default";
 	status = "okay";
 };
 
 &usdhc0 {
-	pinctrl-0 = <&pinctrl_sd0>;
+	pinctrl-0 = <&sd0_pins>;
 	pinctrl-1 = <>;
 	pinctrl-2 = <>;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
