--- a/fdts/s32g274a-bluebox3.dts
+++ b/fdts/s32g274a-bluebox3.dts
@@ -140,150 +140,282 @@
 };
 
 &pinctrl {
-	board_pinctrl {
-		u-boot,dm-pre-reloc;
+	u-boot,dm-pre-reloc;
+
 	dspi0_pins: dspi0 {
-		dspi0_grp {
-			fsl,pins = <PA13_MSCR_S32G PA13_SPI0_SCK_CFG
-				    PA14_MSCR_S32G PA14_SPI0_SIN_CFG
-				    PA15_MSCR_S32G PA15_SPI0_SOUT_CFG
-				    PB09_MSCR_S32G PB09_SPI0_CS1_CFG
-				    PB10_MSCR_S32G PB10_SPI0_CS2_CFG
-				    DSPI0_SIN_IMCR PA14_SPI0_SIN_IN
-				    >;
+		dspi0_grp0 {
+			pinmux = <S32CC_PINMUX(13, FUNC1)>,
+				 <S32CC_PINMUX(15, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
 		};
+
+		dspi0_grp1 {
+			pinmux = <S32CC_PINMUX(14, FUNC0)>;
+			input-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+			bias-pull-up;
+		};
+
+		dspi0_grp2 {
+			pinmux = <S32CC_PINMUX(25, FUNC5)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+			bias-pull-up;
+		};
+
+		dspi0_grp3 {
+			pinmux = <S32CC_PINMUX(26, FUNC3)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+			bias-pull-up;
+		};
+
+		dspi0_grp4 {
+			pinmux = <S32CC_PINMUX(982, FUNC2)>;
+		};
+
 	};
 
 	dspi1_pins: dspi1 {
-		dspi1_grp {
-			fsl,pins = <PA06_MSCR_S32G PA06_SPI1_SOUT_CFG
-				    PA07_MSCR_S32G PA07_SPI1_CS0_CFG
-				    PA08_MSCR_S32G PA08_SPI1_SCK_CFG
-				    PE04_MSCR_S32G PE04_SPI1_CS3_CFG
-				    PF15_MSCR_S32G PF15_SPI1_SIN_CFG
-				    DSPI1_SIN_IMCR PF15_SPI1_SIN_IN
-				    >;
+		dspi1_grp0 {
+			pinmux = <S32CC_PINMUX(6, FUNC2)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
 		};
+
+		dspi1_grp1 {
+			pinmux = <S32CC_PINMUX(7, FUNC2)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+			bias-pull-up;
+		};
+
+		dspi1_grp2 {
+			pinmux = <S32CC_PINMUX(8, FUNC3)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+		};
+
+		dspi1_grp3 {
+			pinmux = <S32CC_PINMUX(68, FUNC3)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+			bias-pull-up;
+		};
+
+		dspi1_grp4 {
+			pinmux = <S32CC_PINMUX(95, FUNC0)>;
+			input-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+			bias-pull-up;
+		};
+
+		dspi1_grp5 {
+			pinmux = <S32CC_PINMUX(987, FUNC2)>;
+		};
+
 	};
 
 	i2c0_pins: i2c0 {
-		i2c0_grp {
-			fsl,pins = <PB00_MSCR_S32G PB00_I2C0_SDA_CFG
-				    PB01_MSCR_S32G PB01_I2C0_SCL_CFG
-				    I2C0_SDA_IMCR PB00_I2C0_SDA_IN
-				    I2C0_SCL_IMCR PB01_I2C0_SCL_IN
-				    >;
+		i2c0_grp0 {
+			pinmux = <S32CC_PINMUX(16, FUNC1)>,
+				 <S32CC_PINMUX(17, FUNC1)>;
+			drive-open-drain;
+			output-enable;
+			input-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
 		};
+
+		i2c0_grp1 {
+			pinmux = <S32CC_PINMUX(565, FUNC2)>,
+				 <S32CC_PINMUX(566, FUNC2)>;
+		};
+
 	};
 
 	i2c0_gpio_pins: i2c0_gpio {
-		i2c0_gpio_grp {
-			fsl,pins = <PB00_MSCR_S32G PB00_I2C0_SDA_GPIO
-				    PB01_MSCR_S32G PB01_I2C0_SCL_GPIO
-				    I2C0_SDA_IMCR IMCR_DISABLED
-				    I2C0_SCL_IMCR IMCR_DISABLED
-				    >;
+		i2c0_gpio_grp0 {
+			pinmux = <S32CC_PINMUX(16, FUNC0)>,
+				 <S32CC_PINMUX(17, FUNC0)>;
+			drive-open-drain;
+			output-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
 		};
+
+		i2c0_gpio_grp1 {
+			pinmux = <S32CC_PINMUX(565, FUNC0)>,
+				 <S32CC_PINMUX(566, FUNC0)>;
+		};
+
 	};
 
 	i2c1_pins: i2c1 {
-		i2c1_grp {
-			fsl,pins = <PB03_MSCR_S32G PB03_I2C1_SCL_CFG
-				    PB04_MSCR_S32G PB04_I2C1_SDA_CFG
-				    I2C1_SCL_IMCR PB03_I2C1_SCL_IN
-				    I2C1_SDA_IMCR PB04_I2C1_SDA_IN
-				    >;
+		i2c1_grp0 {
+			pinmux = <S32CC_PINMUX(19, FUNC1)>,
+				 <S32CC_PINMUX(20, FUNC1)>;
+			drive-open-drain;
+			output-enable;
+			input-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
 		};
+
+		i2c1_grp1 {
+			pinmux = <S32CC_PINMUX(717, FUNC2)>,
+				 <S32CC_PINMUX(718, FUNC2)>;
+		};
+
 	};
 
 	i2c1_gpio_pins: i2c1_gpio {
-		i2c1_gpio_grp {
-			fsl,pins = <PB03_MSCR_S32G PB03_I2C1_SCL_GPIO
-				    PB04_MSCR_S32G PB04_I2C1_SDA_GPIO
-				    I2C1_SCL_IMCR IMCR_DISABLED
-				    I2C1_SDA_IMCR IMCR_DISABLED
-				    >;
+		i2c1_gpio_grp0 {
+			pinmux = <S32CC_PINMUX(19, FUNC0)>,
+				 <S32CC_PINMUX(20, FUNC0)>;
+			drive-open-drain;
+			output-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
 		};
+
+		i2c1_gpio_grp1 {
+			pinmux = <S32CC_PINMUX(717, FUNC0)>,
+				 <S32CC_PINMUX(718, FUNC0)>;
+		};
+
 	};
 
 	i2c2_pins: i2c2 {
-		i2c2_grp {
-			fsl,pins = <PB05_MSCR_S32G PB05_I2C2_SCL_CFG
-				    PB06_MSCR_S32G PB06_I2C2_SDA_CFG
-				    I2C2_SCL_IMCR PB05_I2C2_SCL_IN
-				    I2C2_SDA_IMCR PB06_I2C2_SDA_IN
-				    >;
+		i2c2_grp0 {
+			pinmux = <S32CC_PINMUX(21, FUNC1)>,
+				 <S32CC_PINMUX(22, FUNC1)>;
+			drive-open-drain;
+			output-enable;
+			input-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
 		};
+
+		i2c2_grp1 {
+			pinmux = <S32CC_PINMUX(719, FUNC2)>,
+				 <S32CC_PINMUX(720, FUNC2)>;
+		};
+
 	};
 
 	i2c2_gpio_pins: i2c2_gpio {
-		i2c2_gpio_grp {
-			fsl,pins = <PB05_MSCR_S32G PB05_I2C2_SCL_GPIO
-				    PB06_MSCR_S32G PB06_I2C2_SDA_GPIO
-				    I2C2_SCL_IMCR IMCR_DISABLED
-				    I2C2_SDA_IMCR IMCR_DISABLED
-				    >;
+		i2c2_gpio_grp0 {
+			pinmux = <S32CC_PINMUX(21, FUNC0)>,
+				 <S32CC_PINMUX(22, FUNC0)>;
+			drive-open-drain;
+			output-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
 		};
+
+		i2c2_gpio_grp1 {
+			pinmux = <S32CC_PINMUX(719, FUNC0)>,
+				 <S32CC_PINMUX(720, FUNC0)>;
+		};
+
 	};
 
 	i2c4_pins: i2c4 {
-		i2c4_grp {
-			fsl,pins = <PC01_MSCR_S32G PC01_I2C4_SDA_CFG
-				    PC02_MSCR_S32G PC02_I2C4_SCL_CFG
-				    I2C4_SDA_IMCR PC01_I2C4_SDA_IN
-				    I2C4_SCL_IMCR PC02_I2C4_SCL_IN
-				    >;
+		i2c4_grp0 {
+			pinmux = <S32CC_PINMUX(33, FUNC1)>;
+			drive-open-drain;
+			output-enable;
+			input-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
 		};
+
+		i2c4_grp1 {
+			pinmux = <S32CC_PINMUX(34, FUNC2)>;
+			drive-open-drain;
+			output-enable;
+			input-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+		};
+
+		i2c4_grp2 {
+			pinmux = <S32CC_PINMUX(724, FUNC3)>,
+				 <S32CC_PINMUX(723, FUNC3)>;
+		};
+
 	};
 
 	i2c4_gpio_pins: i2c4_gpio {
-		i2c4_gpio_grp {
-			fsl,pins = <PC01_MSCR_S32G PC01_I2C4_SDA_GPIO
-				    PC02_MSCR_S32G PC02_I2C4_SCL_GPIO
-				    I2C4_SDA_IMCR IMCR_DISABLED
-				    I2C4_SCL_IMCR IMCR_DISABLED
-				    >;
+		i2c4_gpio_grp0 {
+			pinmux = <S32CC_PINMUX(33, FUNC0)>,
+				 <S32CC_PINMUX(34, FUNC0)>;
+			drive-open-drain;
+			output-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
 		};
+
+		i2c4_gpio_grp1 {
+			pinmux = <S32CC_PINMUX(724, FUNC0)>,
+				 <S32CC_PINMUX(723, FUNC0)>;
+		};
+
 	};
 
 	qspi_pins: qspi {
-		qspi_grp {
-			fsl,pins = <PF05_MSCR_S32G PF05_QSPI_DATA_A0_CFG
-				    PF06_MSCR_S32G PF06_QSPI_DATA_A1_CFG
-				    PF07_MSCR_S32G PF07_QSPI_DATA_A2_CFG
-				    PF08_MSCR_S32G PF08_QSPI_DATA_A3_CFG
-				    PF09_MSCR_S32G PF09_QSPI_DATA_A4_CFG
-				    PF10_MSCR_S32G PF10_QSPI_DATA_A5_CFG
-				    PF11_MSCR_S32G PF11_QSPI_DATA_A6_CFG
-				    PF12_MSCR_S32G PF12_QSPI_DATA_A7_CFG
-				    PF13_MSCR_S32G PF13_QSPI_DQS_A_CFG
-				    PG00_MSCR_S32G PG00_QSPI_CLK_A_CFG
-				    PG01_MSCR_S32G PG01_QSPI_CLK_A_b_CFG
-				    PG02_MSCR_S32G PG02_QSPI_CLK_2A_CFG
-				    PG03_MSCR_S32G PG03_QSPI_CLK_2A_b_CFG
-				    PG04_MSCR_S32G PG04_QSPI_CS_A0
-				    PG05_MSCR_S32G PG05_QSPI_CS_A1
-				    QSPI_DATA0_A_IMCR PF05_QSPI_DATA_A0_IN
-				    QSPI_DATA1_A_IMCR PF06_QSPI_DATA_A1_IN
-				    QSPI_DATA2_A_IMCR PF07_QSPI_DATA_A2_IN
-				    QSPI_DATA3_A_IMCR PF08_QSPI_DATA_A3_IN
-				    QSPI_DATA4_A_IMCR PF09_QSPI_DATA_A4_IN
-				    QSPI_DATA5_A_IMCR PF10_QSPI_DATA_A5_IN
-				    QSPI_DATA6_A_IMCR PF11_QSPI_DATA_A6_IN
-				    QSPI_DATA7_A_IMCR PF12_QSPI_DATA_A7_IN
-				    QSPI_DQS_A_IMCR PF13_DQS_A_IN
-				    >;
+		qspi_grp0 {
+			pinmux = <S32CC_PINMUX(85, FUNC1)>,
+				 <S32CC_PINMUX(86, FUNC1)>,
+				 <S32CC_PINMUX(87, FUNC1)>,
+				 <S32CC_PINMUX(88, FUNC1)>,
+				 <S32CC_PINMUX(89, FUNC1)>,
+				 <S32CC_PINMUX(90, FUNC1)>,
+				 <S32CC_PINMUX(91, FUNC1)>,
+				 <S32CC_PINMUX(92, FUNC1)>,
+				 <S32CC_PINMUX(93, FUNC1)>;
+			output-enable;
+			input-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
+			bias-pull-down;
 		};
+
+		qspi_grp1 {
+			pinmux = <S32CC_PINMUX(96, FUNC1)>,
+				 <S32CC_PINMUX(97, FUNC1)>,
+				 <S32CC_PINMUX(98, FUNC1)>,
+				 <S32CC_PINMUX(99, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
+		};
+
+		qspi_grp2 {
+			pinmux = <S32CC_PINMUX(100, FUNC1)>,
+				 <S32CC_PINMUX(101, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
+			bias-pull-up;
+		};
+
+		qspi_grp3 {
+			pinmux = <S32CC_PINMUX(540, FUNC2)>,
+				 <S32CC_PINMUX(541, FUNC2)>,
+				 <S32CC_PINMUX(542, FUNC2)>,
+				 <S32CC_PINMUX(543, FUNC2)>,
+				 <S32CC_PINMUX(544, FUNC2)>,
+				 <S32CC_PINMUX(545, FUNC2)>,
+				 <S32CC_PINMUX(546, FUNC2)>,
+				 <S32CC_PINMUX(547, FUNC2)>,
+				 <S32CC_PINMUX(548, FUNC2)>;
+		};
+
 	};
 
 	uart0_pins: uart0 {
-		uart0_grp {
-			u-boot,dm-pre-reloc;
-			fsl,pins = <PC09_MSCR_S32G PC09_LIN0_TX_CFG
-				    PC10_MSCR_S32G PC10_LIN0_RX_CFG
-				    LIN0_RX_IMCR PC10_LIN0_RX_IN>;
+		uart0_grp0 {
+			pinmux = <S32CC_PINMUX(41, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
 		};
-	};
+
+		uart0_grp1 {
+			pinmux = <S32CC_PINMUX(42, FUNC0)>;
+			input-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+		};
 	};
 };
 
