--- a/fdts/s32r45-evb.dts
+++ b/fdts/s32r45-evb.dts
@@ -88,194 +88,368 @@
 };
 
 &pinctrl {
-	board_pinctrl {
-		u-boot,dm-pre-reloc;
+	u-boot,dm-pre-reloc;
+
 	dspi1_pins: dspi1 {
-		dspi1_grp {
-			fsl,pins = <PB04_MSCR_S32R45 PB04_SPI1_SCK_CFG
-				    PB05_MSCR_S32R45 PB05_SPI1_SIN_CFG
-				    PB06_MSCR_S32R45 PB06_SPI1_SOUT_CFG
-				    PB07_MSCR_S32R45 PB07_SPI1_CS0_CFG
-				    PB08_MSCR_S32R45 PB08_SPI1_CS1_CFG
-				    DSPI1_SIN_IMCR PB05_SPI1_SIN_IN
-				    >;
+		dspi1_grp0 {
+			pinmux = <S32CC_PINMUX(20, FUNC1)>,
+				 <S32CC_PINMUX(22, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
 		};
+
+		dspi1_grp1 {
+			pinmux = <S32CC_PINMUX(21, FUNC0)>;
+			input-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+			bias-pull-up;
+		};
+
+		dspi1_grp2 {
+			pinmux = <S32CC_PINMUX(23, FUNC1)>,
+				 <S32CC_PINMUX(24, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+			bias-pull-up;
+		};
+
+		dspi1_grp3 {
+			pinmux = <S32CC_PINMUX(623, FUNC4)>;
+		};
+
 	};
 
 	dspi2_pins: dspi2 {
-		dspi2_grp {
-			fsl,pins = <PB11_MSCR_S32R45 PB11_SPI2_SCK_CFG
-				    PB13_MSCR_S32R45 PB13_SPI2_SOUT_CFG
-				    PB14_MSCR_S32R45 PB14_SPI2_CS0_CFG
-				    PB15_MSCR_S32R45 PB15_SPI2_CS1_CFG
-				    PC01_MSCR_S32R45 PC01_SPI2_SIN_CFG
-				    DSPI2_SIN_IMCR PC01_SPI2_SIN_IN
-				    >;
+		dspi2_grp0 {
+			pinmux = <S32CC_PINMUX(27, FUNC1)>,
+				 <S32CC_PINMUX(29, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
 		};
+
+		dspi2_grp1 {
+			pinmux = <S32CC_PINMUX(30, FUNC1)>,
+				 <S32CC_PINMUX(31, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+			bias-pull-up;
+		};
+
+		dspi2_grp2 {
+			pinmux = <S32CC_PINMUX(33, FUNC0)>;
+			input-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+			bias-pull-up;
+		};
+
+		dspi2_grp3 {
+			pinmux = <S32CC_PINMUX(681, FUNC2)>;
+		};
+
 	};
 
 	dspi3_pins: dspi3 {
-		dspi3_grp {
-			fsl,pins = <PC04_MSCR_S32R45 PC04_SPI3_SCK_CFG
-				    PC06_MSCR_S32R45 PC06_SPI3_SIN_CFG
-				    PC07_MSCR_S32R45 PC07_SPI3_CS0_CFG
-				    PC08_MSCR_S32R45 PC08_SPI3_CS1_CFG
-				    PC13_MSCR_S32R45 PC13_SPI3_SOUT_CFG
-				    DSPI3_SIN_IMCR PC06_SPI3_SIN_IN
-				    >;
+		dspi3_grp0 {
+			pinmux = <S32CC_PINMUX(36, FUNC1)>,
+				 <S32CC_PINMUX(45, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
 		};
+
+		dspi3_grp1 {
+			pinmux = <S32CC_PINMUX(38, FUNC0)>;
+			input-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+			bias-pull-up;
+		};
+
+		dspi3_grp2 {
+			pinmux = <S32CC_PINMUX(39, FUNC1)>,
+				 <S32CC_PINMUX(40, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+			bias-pull-up;
+		};
+
+		dspi3_grp3 {
+			pinmux = <S32CC_PINMUX(645, FUNC2)>;
+		};
+
 	};
 
 	dspi5_pins: dspi5 {
-		dspi5_grp {
-			fsl,pins = <PK00_MSCR_S32R45 PK00_SPI5_SCK_CFG
-				    PK03_MSCR_S32R45 PK03_SPI5_CS0_CFG
-				    PK04_MSCR_S32R45 PK04_SPI5_SIN_CFG
-				    PK05_MSCR_S32R45 PK05_SPI5_SOUT_CFG
-				    DSPI5_SIN_IMCR PK04_SPI5_SIN_IN
-				    >;
+		dspi5_grp0 {
+			pinmux = <S32CC_PINMUX(128, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
 		};
+
+		dspi5_grp1 {
+			pinmux = <S32CC_PINMUX(131, FUNC2)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+			bias-pull-up;
+		};
+
+		dspi5_grp2 {
+			pinmux = <S32CC_PINMUX(132, FUNC0)>;
+			input-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+			bias-pull-up;
+		};
+
+		dspi5_grp3 {
+			pinmux = <S32CC_PINMUX(133, FUNC4)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+		};
+
+		dspi5_grp4 {
+			pinmux = <S32CC_PINMUX(750, FUNC4)>;
+		};
+
 	};
 
 	gmac0_mdio_pins: gmac0_mdio {
-		gmac0_mdio_grp {
-			fsl,pins = <PD12_MSCR_S32R45 PD12_GMAC0_MDC_CFG
-				    PD13_MSCR_S32R45 PD13_GMAC0_MDIO_CFG
-				    GMAC0_MDIO_IMCR PD13_GMAC0_MDIO_IN
-				    >;
+		gmac0_mdio_grp0 {
+			pinmux = <S32CC_PINMUX(60, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
 		};
+
+		gmac0_mdio_grp1 {
+			pinmux = <S32CC_PINMUX(61, FUNC1)>;
+			drive-open-drain;
+			output-enable;
+			input-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
+		};
+
+		gmac0_mdio_grp2 {
+			pinmux = <S32CC_PINMUX(527, FUNC2)>;
+		};
+
 	};
 
 	gmac0_pins: gmac0 {
-		gmac0_grp {
-			fsl,pins = <PE02_MSCR_S32R45 PE02_GMAC0_TX_CLK_CFG
-				    PE03_MSCR_S32R45 PE03_GMAC0_TX_EN_CFG
-				    PE04_MSCR_S32R45 PE04_GMAC0_TX_D0_CFG
-				    PE05_MSCR_S32R45 PE05_GMAC0_TX_D1_CFG
-				    PE06_MSCR_S32R45 PE06_GMAC0_TX_D2_CFG
-				    PE07_MSCR_S32R45 PE07_GMAC0_TX_D3_CFG
-				    PE08_MSCR_S32R45 PE08_GMAC0_RX_CLK_CFG
-				    PE09_MSCR_S32R45 PE09_GMAC0_RX_DV_CFG
-				    PE10_MSCR_S32R45 PE10_GMAC0_RX_D0_CFG
-				    PE11_MSCR_S32R45 PE11_GMAC0_RX_D1_CFG
-				    PE12_MSCR_S32R45 PE12_GMAC0_RX_D2_CFG
-				    PE13_MSCR_S32R45 PE13_GMAC0_RX_D3_CFG
-				    GMAC0_TX_CLK_IMCR PE02_GMAC0_TX_CLK_IN
-				    GMAC0_RX_CLK_IMCR PE08_GMAC0_RX_CLK_IN
-				    GMAC0_RX_DV_IMCR PE09_GMAC0_RX_DV_IN
-				    GMAC0_RX_D0_IMCR PE10_GMAC0_RX_D0_IN
-				    GMAC0_RX_D1_IMCR PE11_GMAC0_RX_D1_IN
-				    GMAC0_RX_D2_IMCR PE12_GMAC0_RX_D2_IN
-				    GMAC0_RX_D3_IMCR PE13_GMAC0_RX_D3_IN
-				    >;
+		gmac0_grp0 {
+			pinmux = <S32CC_PINMUX(66, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
+			bias-pull-up;
 		};
+
+		gmac0_grp1 {
+			pinmux = <S32CC_PINMUX(67, FUNC1)>,
+				 <S32CC_PINMUX(68, FUNC1)>,
+				 <S32CC_PINMUX(69, FUNC1)>,
+				 <S32CC_PINMUX(70, FUNC1)>,
+				 <S32CC_PINMUX(71, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
+		};
+
+		gmac0_grp2 {
+			pinmux = <S32CC_PINMUX(72, FUNC1)>,
+				 <S32CC_PINMUX(73, FUNC1)>,
+				 <S32CC_PINMUX(74, FUNC1)>,
+				 <S32CC_PINMUX(75, FUNC1)>,
+				 <S32CC_PINMUX(76, FUNC1)>,
+				 <S32CC_PINMUX(77, FUNC1)>;
+			input-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
+		};
+
+		gmac0_grp3 {
+			pinmux = <S32CC_PINMUX(538, FUNC2)>,
+				 <S32CC_PINMUX(529, FUNC2)>,
+				 <S32CC_PINMUX(530, FUNC2)>,
+				 <S32CC_PINMUX(531, FUNC2)>,
+				 <S32CC_PINMUX(532, FUNC2)>,
+				 <S32CC_PINMUX(533, FUNC2)>,
+				 <S32CC_PINMUX(534, FUNC2)>;
+		};
+
 	};
 
 	i2c0_pins: i2c0 {
-		i2c0_grp {
-			fsl,pins = <PB00_MSCR_S32R45 PB00_I2C0_SDA_CFG
-				    PB01_MSCR_S32R45 PB01_I2C0_SCL_CFG
-				    I2C0_SDA_IMCR PB00_I2C0_SDA_IN
-				    I2C0_SCL_IMCR PB01_I2C0_SCL_IN
-				    >;
+		i2c0_grp0 {
+			pinmux = <S32CC_PINMUX(16, FUNC1)>,
+				 <S32CC_PINMUX(17, FUNC1)>;
+			drive-open-drain;
+			output-enable;
+			input-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
 		};
+
+		i2c0_grp1 {
+			pinmux = <S32CC_PINMUX(565, FUNC2)>,
+				 <S32CC_PINMUX(566, FUNC2)>;
+		};
+
 	};
 
 	i2c0_gpio_pins: i2c0_gpio {
-		i2c0_gpio_grp {
-			fsl,pins = <PB00_MSCR_S32R45 PB00_I2C0_SDA_GPIO
-				    PB01_MSCR_S32R45 PB01_I2C0_SCL_GPIO
-				    I2C0_SDA_IMCR IMCR_DISABLED
-				    I2C0_SCL_IMCR IMCR_DISABLED
-				    >;
+		i2c0_gpio_grp0 {
+			pinmux = <S32CC_PINMUX(16, FUNC0)>,
+				 <S32CC_PINMUX(17, FUNC0)>;
+			drive-open-drain;
+			output-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
 		};
+
+		i2c0_gpio_grp1 {
+			pinmux = <S32CC_PINMUX(565, FUNC0)>,
+				 <S32CC_PINMUX(566, FUNC0)>;
+		};
+
 	};
 
 	i2c1_pins: i2c1 {
-		i2c1_grp {
-			fsl,pins = <PA14_MSCR_S32R45 PA14_I2C1_SCL_CFG
-				    PA15_MSCR_S32R45 PA15_I2C1_SDA_CFG
-				    I2C1_SCL_IMCR PA14_I2C1_SCL_IN
-				    I2C1_SDA_IMCR PA15_I2C1_SDA_IN
-				    >;
+		i2c1_grp0 {
+			pinmux = <S32CC_PINMUX(14, FUNC4)>;
+			drive-open-drain;
+			output-enable;
+			input-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
 		};
+
+		i2c1_grp1 {
+			pinmux = <S32CC_PINMUX(15, FUNC3)>;
+			drive-open-drain;
+			output-enable;
+			input-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+		};
+
+		i2c1_grp2 {
+			pinmux = <S32CC_PINMUX(615, FUNC2)>,
+				 <S32CC_PINMUX(616, FUNC2)>;
+		};
+
 	};
 
 	i2c1_gpio_pins: i2c1_gpio {
-		i2c1_gpio_grp {
-			fsl,pins = <PA14_MSCR_S32R45 PA14_I2C1_SCL_GPIO
-				    PA15_MSCR_S32R45 PA15_I2C1_SDA_GPIO
-				    I2C1_SCL_IMCR IMCR_DISABLED
-				    I2C1_SDA_IMCR IMCR_DISABLED
-				    >;
+		i2c1_gpio_grp0 {
+			pinmux = <S32CC_PINMUX(14, FUNC0)>,
+				 <S32CC_PINMUX(15, FUNC0)>;
+			drive-open-drain;
+			output-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
 		};
+
+		i2c1_gpio_grp1 {
+			pinmux = <S32CC_PINMUX(615, FUNC0)>,
+				 <S32CC_PINMUX(616, FUNC0)>;
+		};
+
 	};
 
 	qspi_pins: qspi {
-		qspi_grp {
-			fsl,pins = <PF05_MSCR_S32R45 PF05_QSPI_DATA_A0_CFG
-				    PF06_MSCR_S32R45 PF06_QSPI_DATA_A1_CFG
-				    PF07_MSCR_S32R45 PF07_QSPI_DATA_A2_CFG
-				    PF08_MSCR_S32R45 PF08_QSPI_DATA_A3_CFG
-				    PF09_MSCR_S32R45 PF09_QSPI_DATA_A4_CFG
-				    PF10_MSCR_S32R45 PF10_QSPI_DATA_A5_CFG
-				    PF11_MSCR_S32R45 PF11_QSPI_DATA_A6_CFG
-				    PF12_MSCR_S32R45 PF12_QSPI_DATA_A7_CFG
-				    PF13_MSCR_S32R45 PF13_QSPI_DQS_A_CFG
-				    PG00_MSCR_S32R45 PG00_QSPI_CLK_A_CFG
-				    PG01_MSCR_S32R45 PG01_QSPI_CLK_A_b_CFG
-				    PG02_MSCR_S32R45 PG02_QSPI_CLK_2A_CFG
-				    PG03_MSCR_S32R45 PG03_QSPI_CLK_2A_b_CFG
-				    PG04_MSCR_S32R45 PG04_QSPI_CS_A0
-				    PG05_MSCR_S32R45 PG05_QSPI_CS_A1
-				    QSPI_DATA0_A_IMCR PF05_QSPI_DATA_A0_IN
-				    QSPI_DATA1_A_IMCR PF06_QSPI_DATA_A1_IN
-				    QSPI_DATA2_A_IMCR PF07_QSPI_DATA_A2_IN
-				    QSPI_DATA3_A_IMCR PF08_QSPI_DATA_A3_IN
-				    QSPI_DATA4_A_IMCR PF09_QSPI_DATA_A4_IN
-				    QSPI_DATA5_A_IMCR PF10_QSPI_DATA_A5_IN
-				    QSPI_DATA6_A_IMCR PF11_QSPI_DATA_A6_IN
-				    QSPI_DATA7_A_IMCR PF12_QSPI_DATA_A7_IN
-				    QSPI_DQS_A_IMCR PF13_DQS_A_IN
-				    >;
+		qspi_grp0 {
+			pinmux = <S32CC_PINMUX(85, FUNC1)>,
+				 <S32CC_PINMUX(86, FUNC1)>,
+				 <S32CC_PINMUX(87, FUNC1)>,
+				 <S32CC_PINMUX(88, FUNC1)>,
+				 <S32CC_PINMUX(89, FUNC1)>,
+				 <S32CC_PINMUX(90, FUNC1)>,
+				 <S32CC_PINMUX(91, FUNC1)>,
+				 <S32CC_PINMUX(92, FUNC1)>,
+				 <S32CC_PINMUX(93, FUNC1)>;
+			output-enable;
+			input-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
+			bias-pull-down;
 		};
+
+		qspi_grp1 {
+			pinmux = <S32CC_PINMUX(96, FUNC1)>,
+				 <S32CC_PINMUX(97, FUNC1)>,
+				 <S32CC_PINMUX(98, FUNC1)>,
+				 <S32CC_PINMUX(99, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
+		};
+
+		qspi_grp2 {
+			pinmux = <S32CC_PINMUX(100, FUNC1)>,
+				 <S32CC_PINMUX(101, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
+			bias-pull-up;
+		};
+
+		qspi_grp3 {
+			pinmux = <S32CC_PINMUX(540, FUNC2)>,
+				 <S32CC_PINMUX(541, FUNC2)>,
+				 <S32CC_PINMUX(542, FUNC2)>,
+				 <S32CC_PINMUX(543, FUNC2)>,
+				 <S32CC_PINMUX(544, FUNC2)>,
+				 <S32CC_PINMUX(545, FUNC2)>,
+				 <S32CC_PINMUX(546, FUNC2)>,
+				 <S32CC_PINMUX(547, FUNC2)>,
+				 <S32CC_PINMUX(548, FUNC2)>;
+		};
+
 	};
 
 	sd0_pins: sd0 {
-		sd0_grp {
-			fsl,pins = <PC14_MSCR_S32R45 PC14_SD0_CLK_CFG
-				    PC15_MSCR_S32R45 PC15_SD0_CMD_CFG
-				    PD00_MSCR_S32R45 PD00_SD0_D0_CFG
-				    PD01_MSCR_S32R45 PD01_SD0_D1_CFG
-				    PD02_MSCR_S32R45 PD02_SD0_D2_CFG
-				    PD03_MSCR_S32R45 PD03_SD0_D3_CFG
-				    PD04_MSCR_S32R45 PD04_SD0_D4_CFG
-				    PD05_MSCR_S32R45 PD05_SD0_D5_CFG
-				    PD06_MSCR_S32R45 PD06_SD0_D6_CFG
-				    PD07_MSCR_S32R45 PD07_SD0_D7_CFG
-				    PD08_MSCR_S32R45 PD08_SD0_RST_CFG
-				    PD09_MSCR_S32R45 PD09_SD0_VSELECT_CFG
-				    SD0_CMD_IMCR PC15_SD0_CMD_IN
-				    SD0_D0_IMCR PD00_SD0_D0_IN
-				    SD0_D1_IMCR PD01_SD0_D1_IN
-				    SD0_D2_IMCR PD02_SD0_D2_IN
-				    SD0_D3_IMCR PD03_SD0_D3_IN
-				    SD0_D4_IMCR PD04_SD0_D4_IN
-				    SD0_D5_IMCR PD05_SD0_D5_IN
-				    SD0_D6_IMCR PD06_SD0_D6_IN
-				    SD0_D7_IMCR PD07_SD0_D7_IN
-				    >;
+		sd0_grp0 {
+			pinmux = <S32CC_PINMUX(46, FUNC1)>,
+				 <S32CC_PINMUX(56, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
+			bias-pull-down;
 		};
+
+		sd0_grp1 {
+			pinmux = <S32CC_PINMUX(47, FUNC1)>,
+				 <S32CC_PINMUX(48, FUNC1)>,
+				 <S32CC_PINMUX(49, FUNC1)>,
+				 <S32CC_PINMUX(50, FUNC1)>,
+				 <S32CC_PINMUX(51, FUNC1)>,
+				 <S32CC_PINMUX(52, FUNC1)>,
+				 <S32CC_PINMUX(53, FUNC1)>,
+				 <S32CC_PINMUX(54, FUNC1)>,
+				 <S32CC_PINMUX(55, FUNC1)>;
+			output-enable;
+			input-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
+			bias-pull-up;
+		};
+
+		sd0_grp2 {
+			pinmux = <S32CC_PINMUX(57, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_208MHZ>;
+		};
+
+		sd0_grp3 {
+			pinmux = <S32CC_PINMUX(515, FUNC2)>,
+				 <S32CC_PINMUX(516, FUNC2)>,
+				 <S32CC_PINMUX(517, FUNC2)>,
+				 <S32CC_PINMUX(520, FUNC2)>,
+				 <S32CC_PINMUX(521, FUNC2)>,
+				 <S32CC_PINMUX(522, FUNC2)>,
+				 <S32CC_PINMUX(523, FUNC2)>,
+				 <S32CC_PINMUX(519, FUNC2)>,
+				 <S32CC_PINMUX(518, FUNC2)>;
+		};
+
 	};
 
 	uart0_pins: uart0 {
-		uart0_grp {
-			u-boot,dm-pre-reloc;
-			fsl,pins = <PC09_MSCR_S32R45 PC09_LIN0_TX_CFG
-				    PC10_MSCR_S32R45 PC10_LIN0_RX_CFG
-				    LIN0_RX_IMCR PC10_LIN0_RX_IN>;
+		uart0_grp0 {
+			pinmux = <S32CC_PINMUX(41, FUNC1)>;
+			output-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
 		};
-	};
+
+		uart0_grp1 {
+			pinmux = <S32CC_PINMUX(42, FUNC0)>;
+			input-enable;
+			slew-rate = <S32CC_SLEW_83MHZ>;
+		};
 	};
 };
 
