fdts: s32: add s32cc-crypto.dtsi file
The newly introduced DT contains information about s32's Messaging Units
(MUs). The four instances facilitate the communication between the A53
cores and HSE. Include s32cc-crypto.dtsi in the dts if HSE_SECBOOT is
enabled.

Issue: ALB-8989
Signed-off-by: Bogdan Roman <bogdan-gabriel.roman@nxp.com>

--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -12,6 +12,9 @@
 #include <dt-bindings/phy/phy.h>
 #include <dt-bindings/reset/s32gen1-scmi-reset.h>
 #include <dt-bindings/reset/s32gen1-wkpu.h>
+#if defined(HSE_SECBOOT)
+#include "s32cc-crypto.dtsi"
+#endif
 
 / {
 	interrupt-parent = <&gic>;
