fdts: s32cc: use dt-bindings defines for PHI1 and PER clks
Issue: ALB-9479

Signed-off-by: Radu Pirea <radu-nicolae.pirea@nxp.com>

--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -399,7 +399,7 @@
 				<0>,
 				<0>,
 				<0>,
-				<80000000>,
+				<S32GEN1_PER_FREQ>,
 				<40000000>,
 				<40000000>,
 				<80000000>,
@@ -453,7 +453,7 @@
 			assigned-clock-rates =
 				<0>,
 				<S32GEN1_PERIPH_PLL_VCO_FREQ>, <100000000>,
-				<80000000>, <80000000>,
+				<S32GEN1_PERIPH_PLL_PHI1_FREQ>, <80000000>,
 				<125000000>, <200000000>,
 				<125000000>, <100000000>;
 		};
