fdts: s32cc: add generic compatible for SIUL2 pinctrl node
This compatible can be searched in order to switch the pinctrl phandle
to be used by U-Boot when using the SCP firmware.

Issue: ALB-9426

Signed-off-by: Andrei Stefanescu <andrei.stefanescu@nxp.com>

--- a/fdts/s32r45.dtsi
+++ b/fdts/s32r45.dtsi
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause)
 /*
- * Copyright 2017-2022 NXP
+ * Copyright 2017-2023 NXP
  */
 #include <dt-bindings/clock/s32r45-clock.h>
 #include <dt-bindings/clock/s32r45-scmi-clock.h>
@@ -108,7 +108,8 @@
 				 <EIRQS_SIUL2_1 0 0x0 0x4403c010 0x0 0xb4>;
 
 			pinctrl: siul2-pinctrl@4009c240 {
-				compatible = "nxp,s32r45-siul2-pinctrl";
+				compatible = "nxp,s32r45-siul2-pinctrl",
+					     "nxp,s32cc-siul2-pinctrl";
 				#pinctrl-cells = <2>;
 
 				reg = <MSCRS_SIUL2_0   0 0x0 0x198>,
