plat: nxp: change HSE_SECBOOT into HSE_SUPPORT
The name of 'HSE_SECBOOT' Build parameter was confusing because enabling
it did not guarantee that secure boot would be performed right away.
Rather, further steps must be performed in linux userspace to enable
seucre boot. Since the 'HSE_SECBOOT' parameter is also enabling certain
HSE features which do not necessarily relate to secure boot, change its
name to HSE_SUPPORT to better reflect its utility.

Issue: ALB-9771
Signed-off-by: Bogdan Roman <bogdan-gabriel.roman@nxp.com>

--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -2,7 +2,7 @@
 /*
  * Device Tree Include file for NXP S32CC family SoCs.
  *
- * Copyright 2019-2022 NXP
+ * Copyright 2019-2023 NXP
  */
 
 #include <dt-bindings/clock/s32gen1-clock-freq.h>
@@ -13,7 +13,7 @@
 #include <dt-bindings/phy/phy.h>
 #include <dt-bindings/reset/s32gen1-scmi-reset.h>
 #include <dt-bindings/reset/s32gen1-wkpu.h>
-#if defined(HSE_SECBOOT)
+#if defined(HSE_SUPPORT)
 #include "s32cc-crypto.dtsi"
 #endif
 
