plat: s32: Add STM timer
STM timer is used for timestamping SCMI messages.

Issue: ALB-9436
Signed-off-by: Andra-Teodora Ilie <andra.ilie@nxp.com>

--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -705,6 +705,12 @@
 			status = "okay";
 		};
 
+		stm6: timer@40224000 {
+			compatible = "nxp,s32cc-stm-global";
+			reg = <0x0 0x40224000 0x0 0x3000>;
+			status = "okay";
+		};
+
 		pit1: pit@40288000 {
 			compatible = "nxp,s32cc-pit";
 			reg = <0x0 0x40288000 0x0 0x3000>;
